--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,12 +1,22 @@
 FROM node:20-alpine
 
+# Add user with the same UID/GID as the host system user
+RUN addgroup -g 1001 appuser && \
+    adduser -u 1000 -G appuser -s /bin/sh -D appuser
+
 WORKDIR /app
 
-COPY package*.json ./
+# Change ownership of the working directory
+RUN chown -R appuser:appuser /app
+
+# Switch to non-root user
+USER appuser
+
+COPY --chown=appuser:appuser package*.json ./
 
 RUN npm install
 
-COPY . .
+COPY --chown=appuser:appuser . .
 
 EXPOSE 5173
 
