--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@storybook/sveltekit": "^8.4.5",
     "@storybook/test": "^8.4.5",
     "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/enhanced-img": "^0.4.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@types/eslint": "^9.6.0",
