--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,4 @@ Thumbs.db
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
-src/lib/components
-src/lib/types/shared/*
+src/lib/components/*
